# praxis-core

./: .dockerignore  .env  .gitignore  Dockerfile  LICENSE  README.md  alex_example.ipynb  docker-compose-local-db.yml  docker-compose.yml  pyproject.toml  recreate_db.py  seed_users.py  test.ipynb
app/: main.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: answer.py  question.py  report.py  review.py  survey.py  user.py
app/routers/: __init__.py  admin.py  api.py  surveys.py  tg.py  users.py
app/schemas/: answer.py  block_questions.py  question.py  review.py  survey.py  user.py
app/services/: export.py  links.py  notification.py  reports.py  review_blocks.py  status_manager.py
app/static/css/: style.css
app/static/js/: form.js
app/templates/: admin_edit.html  base.html  form.html
data/: 1.csv  gen.csv
db/: session.py
db/models/: __init__.py  answer.py  question.py  question_bank.py  report.py  review.py  survey.py  user.py
jinja_templates/: 2_columns.html.jinja  base.html.jinja
src/: tg_bot.py
src/app/: main.py
src/app/core/: config.py  logging.py  prompts.py  security.py
src/app/routers/: __init__.py  admin.py  api.py  surveys.py  telegram.py  tg.py  users.py
src/app/schemas/: answer.py  block_questions.py  common.py  question.py  report.py  review.py  survey.py  telegram.py  user.py
src/app/services/: export.py  links.py  notification.py  review_blocks.py  status_manager.py  telegram_bot.py
src/app/static/css/: style.css
src/app/static/js/: form.js
src/app/templates/: admin_edit.html  base.html  form.html  survey_readonly.html  thanks.html
src/db/: __init__.py
src/db/models/: __init__.py  answer.py  broadcast.py  question.py  question_bank.py  report.py  review.py  survey.py  user.py
src/llm_agg/: predict.py  response.py  utils.py
src/llm_agg/prompts/: __init__.py  base.py  eval.py
src/llm_agg/reports/: jinja.py  plots.py
src/llm_agg/schemas/: dynamic.py  recommendations.py  reviewer.py  sides.py
src/prompts/: base.py  eval.py
src/schemas/: sides.py
src/tg_bot/: main.py  main_old.py  requirements.txt
tg_bot/: bot.py  main.py
tg_bot/db/: session.py
tg_bot/models/: answer.py  broadcast.py  question.py  report.py  review.py  survey.py  user.py
