[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "praxis-core"
version = "0.0.1"
description = "System for automating the feedback collection and employee assessment process."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "Alexandr Kalinin", email = "agarius2003@gmail.com"},
    {name = "Alexey Lunyakov", email = "alx01001@gmail.com"},
    {name = "Vladislav Poletaev", email = "whatisslove7@gmail.com"},
    {name = "George Chufistov", email = "georgechuff-olympiads@yandex.ru"}
]
dependencies = [
    "openai>=1.103.0",
    "pydantic>=2.11.3"
]

[tool.setuptools.packages.find]
where = ["src"]