[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "praxis-core"
version = "0.0.1"
description = "System for automating the feedback collection and employee assessment process."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "Alexandr Kalinin", email = "agarius2003@gmail.com"},
    {name = "Alexey Lunyakov", email = "alx01001@gmail.com"},
    {name = "Vladislav Poletaev", email = "whatisslove7@gmail.com"},
    {name = "George Chufistov", email = "georgechuff-olympiads@yandex.ru"}
]
dependencies = [
    "openai>=1.103.0",
    "pydantic>=2.11.3",
    "fastapi==0.116.1",
    "pydantic==2.11.7",
    "pydantic-settings>=2.2",
    "pydantic_settings==2.10.1",
    "SQLAlchemy>=2.0",
    "uvicorn==0.35.0",
    "jinja2>=3.1",
    "python-multipart==0.0.20",
    "bleach==6.2.0",
    "apscheduler>=3.11.0",
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "psycopg2-binary",
    "httpx",
    "aiogram",
    "numpy",
    "pandas",
    "python-dotenv",
    "matplotlib",
    "weasyprint",
    "openpyxl",
]

[tool.setuptools.packages.find]
where = ["src"]